--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 top: 100px;
             }
             
-            .main, .bubbles {
+            .main {
                 height: 775px;
             }
         }
@@ -371,10 +371,6 @@
                 width: 5px;
                 height: 95px;
             }
-        }
-
-        @media (max-width: 780px) {
-
         }
 
         @media (max-width: 780px) {
